# triton-nlp-service

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
client/: __init__.py  fastapi_server.py  triton_client.py
deployment/: k8s-deployment.yaml
docs/: multilingual_ner_and_language_detection.md  regex_vs_ml_comparison.md
model_repository/data_type_detector/: config.pbtxt
model_repository/data_type_detector/1/: model.py
model_repository/data_type_detector_ml/: config.pbtxt
model_repository/data_type_detector_ml/1/: model.py
model_repository/ensemble_nlp/: config.pbtxt
model_repository/language_detector/: config.pbtxt
model_repository/language_detector/1/: model.py
model_repository/ner/: config.pbtxt
model_repository/ner/1/: model.py
model_repository/ner_multilingual/: config.pbtxt
model_repository/ner_multilingual/1/: model.py
model_repository/postprocessing/: config.pbtxt
model_repository/postprocessing/1/: model.py
model_repository/preprocessing/: config.pbtxt
model_repository/preprocessing/1/: model.py
model_repository/translation/: config.pbtxt
model_repository/translation/1/: model.py
model_repository/transliteration/: config.pbtxt
model_repository/transliteration/1/: model.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: dashboard.yml
monitoring/grafana/datasources/: prometheus.yml
src/: __init__.py  core.py
tests/: conftest.py
tests/integration/: test_integration.py
tests/unit/: test_data_type_detector.py  test_language_detector.py  test_ner.py  test_ner_multilingual.py  test_postprocessing.py  test_preprocessing.py  test_translation.py  test_transliteration.py
